--- a/css/blocks/banner.css
+++ b/css/blocks/banner.css
@@ -1,7 +1,34 @@
 .banner {
 	text-align: center;
+	color: white;
+
 }
 .banner__img {
 	margin: 0 auto;
   max-width: 100%;
+}
+
+.banner--coments {
+	background-image: url('../../img/Rectangle_1.png');
+	background-size: 100%;
+	margin-bottom: 54px;
+}
+
+.banner__note {
+	max-width: 65%;
+	padding: 20px 0 30px;
+	font-size: 17px;
+	font-weight: 100;
+	line-height: 1.8;
+	letter-spacing: 1.7;
+}
+
+.banner__note b {
+	color: #f89513;
+	font-weight: bold;
+}
+
+.banner__container {
+	display: flex;
+	justify-content: center;
 }
