--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 @import url("blocks/nav.css");
 @import url("blocks/contacts.css");
 @import url("blocks/features.css");
+@import url("blocks/cervices.css");
 @import url("blocks/reviews.css");
 @import url("blocks/last_news.css");
 @import url("blocks/sidebar.css");
