--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -16,8 +16,8 @@
 	font-family: 'Open Sans', sans-serif;
 	font-weight: bold;
 	text-align: left;
-  margin-bottom: 20px;
-  padding: 10px;
+  margin: 0 0 20px 0;
+  padding-left: 70px;
 }
 
 .partners__item {
