--- a/css/blocks/reviews.css
+++ b/css/blocks/reviews.css
@@ -10,6 +10,9 @@
   line-height: 1.6;
 }
 
+.cervices {
+  margin-bottom: 30px;
+}
 
 .reviews__main-title {
 	font-size: 52px;
@@ -33,8 +36,9 @@
 
 .review__message {
   margin: 0;
-
+  font-weight: lighter;
 }
+
 
 .reviews__item-serv {
   flex: 1;
@@ -76,24 +80,43 @@
    align-items: flex-start;
    min-width: 160px;
 }
-/* .avatar__pic {
+
+.reviews__list--vertical .review__avatar {
+   margin-right: 0;
+   width: 100%;
+   justify-content: center;
+   margin-bottom: 18px;
+}
+
+.reviews__list--vertical .review__message {
+  font-size: 14px;
+  letter-spacing: -0.5px;
+}
+
+.reviews__pic {
+  border-radius: 3%;
   display: block;
   object-fit: cover;
   width: 100%;
-  height: 100%;
-} */
+}
 
 .reviews__list--vertical {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
+  margin-right: -60px;
 }
 
 .reviews__list--vertical .reviews__item {
   display: flex;
+  /* flex-basis: 300px; */
+  flex: 1;
   flex-direction: column;
-  max-width: 30%;
+  /* max-width: 30%; */
+  align-items: center;
+  min-width: 25%;
+  margin-right: 60px;
 }
 
 
