--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,6 @@
 @import url("blocks/last_news.css");
 @import url("blocks/sidebar.css");
 @import url("blocks/pagination.css");
-@import url("blocks/form-section.css");
+@import url("blocks/form.css");
 @import url("blocks/partners.css");
 @import url("blocks/footer.css");
