--- a/css/blocks/cervices.css
+++ b/css/blocks/cervices.css
@@ -23,7 +23,8 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: space-between;
-  margin-right: -60px;
+  /* для универсальности добавления любого количества блоков li */
+  /* margin-right: -60px; */
 }
 
 .cervices__item {
@@ -34,8 +35,13 @@
   min-width: 25%;
   margin-right: 60px;
   position: relative;
-  padding-bottom: 33px;
-  margin-bottom: 20px;
+  padding-bottom: 53px;
+  margin-bottom: 0px;
+}
+
+.cervices__item:nth-child(3n) {
+  margin-right: 0px;
+
 }
 
 .cervices__name {
