--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -5,23 +5,75 @@
   margin: auto;
 }
 
+.partners__title {
+  font-size: 52px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+  text-align: left;
+  margin: 0 0 20px 0;
+  padding-left: 70px;
+}
+
 .partners__list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-.partners__title {
-	font-size: 52px;
-	font-family: 'Open Sans', sans-serif;
-	font-weight: bold;
-	text-align: left;
-  margin: 0 0 20px 0;
-  padding-left: 70px;
-}
-
 .partners__item {
   flex-grow: 1;
   margin: 30px;
+}
 
+.partners__logo {
+  width: 160px;
+  height: 63px;
+  position: relative;
+  cursor: pointer;
+  background-repeat: no-repeat;
+}
+
+.partners__logo--1:hover {
+  background-image: url(../../img/services/logo-1_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.partners__logo--2:hover {
+  background-image: url(../../img/services/logo-2_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.partners__logo--3:hover {
+  background-image: url(../../img/services/logo-3_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.partners__logo--4:hover {
+  background-image: url(../../img/services/logo-4_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.partners__logo--5:hover {
+  background-image: url(../../img/services/logo-5_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.partners__logo--6:hover {
+  background-image: url(../../img/services/logo-6_color.png);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.partners__logo-pic {
+  max-width: 100%;
+}
+
+.partners__logo-pic:hover {
+  opacity: 0;
 }
