--- a/css/blocks/partners.css
+++ b/css/blocks/partners.css
@@ -1,28 +1,38 @@
+.partners {
+  width: 100%;
+}
+
 .partners__wrapper {
-   width: 66%;
+  width: 100%;
+  border: 1px solid black;
    display: flex;
-   justify-content: center;
-  margin: auto;
+   flex-direction: column;
+   justify-content: space-around;
+   align-items: center;
+   margin-bottom: 20px;
 }
 
 .partners__title {
-  font-size: 52px;
+  font-size: 20px;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
   text-align: left;
-  margin: 0 0 20px 0;
-  padding-left: 70px;
+  margin: 0 0 45px 0;
+  padding-top: 25px;
 }
 
 .partners__list {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-around;
   flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
 }
 
 .partners__item {
   flex-grow: 1;
-  margin: 30px;
+  margin-bottom: 51px;
 }
 
 .partners__logo {
@@ -31,6 +41,9 @@
   position: relative;
   cursor: pointer;
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .partners__logo-pic {
@@ -40,4 +53,5 @@
 
 .partners__logo-pic:hover {
   filter: grayscale(0);
+  transition: 0.2s;
 }
