--- a/css/blocks/reviews.css
+++ b/css/blocks/reviews.css
@@ -1,7 +1,3 @@
-.reviews__container {
-  width: 66%;
-}
-
 .reviews {
   font-family: 'Open Sans', sans-serif;
  	font-weight: lighter;
@@ -20,7 +16,6 @@
 	font-weight: bold;
 	text-align: left;
   margin-bottom: 26px;
-  /* padding: 10px; */
 }
 
 .review__date {
@@ -37,6 +32,7 @@
 .review__message {
   margin: 0;
   font-weight: lighter;
+  color: #221f1f;
 }
 
 
