--- a/css/blocks/sidebar.css
+++ b/css/blocks/sidebar.css
@@ -1,3 +1,16 @@
+.sidebar {
+  width: 24%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 15px;
+  align-items: center;
+  margin-right: 21px;
+}
+
+.sidebar-in-coments {
+  padding-top: 0;
+}
+
 .sidebar__title {
   margin-bottom: 15px;
 }
@@ -14,6 +27,10 @@ h4.top-news__date {
 
 .top-news__date--month {
   color: rgba(19, 18, 18, 0.55);
+}
+
+.sidebar__pic-list {
+  margin-bottom: 30px;
 }
 
 .sidebar__pic-item {
