--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -11,7 +11,6 @@ body {
   margin: 0px;
   font-size: 16px;
   font-family: 'Open Sans', sans-serif;
-  font-weight: bold;
 }
 
 a {
@@ -52,13 +51,29 @@ table {
   flex-direction: column;
 }
 
-.main_content {
-  flex: 1;
+.main-content {
+  width: 75%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  /* padding-top: 10px; */
 }
+
+.main-content--services {
+  padding-top: 23px;
+}
+
 
 .container {
   margin: 0 auto;
-  width: 1058px;
+  width: 1156px;
+}
+
+.page-content__container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+
 }
 
 .name {
