--- a/css/layout/fonts.css
+++ b/css/layout/fonts.css
@@ -1,2 +1,15 @@
-@font-face { font-family: 'GoraFree-Regular';  src: local('GoraFree-Regular'), url('https://nomail.com.ua/files/woff/af6eee1b3c701a7590c05964d553ee66.woff') format('woff'); }
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Roboto:300,400,700&display=swap&subset=cyrillic');
+/* @font-face { font-family: 'GoraFree-Regular';  src: local('GoraFree-Regular'), url('https://nomail.com.ua/files/woff/af6eee1b3c701a7590c05964d553ee66.woff') format('woff'); }
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800|Roboto:300,400,700&display=swap&subset=cyrillic'); */
+@font-face {
+  font-family: 'GoraFree-Regular';
+  src: url(../../fonts/Gora-Free.ttf);
+}
+@font-face {font-family: 'OpenSans-Bold';
+src: url(../../fonts/OpenSans-Bold.ttf)
+}
+@font-face {font-family: 'OpenSans-Light';
+src: url(../../fonts/OpenSans-Light.ttf)
+}
+@font-face {font-family: 'OpenSans-LightItalic';
+src: url(../../fonts/OpenSans-LightItalic.ttf)
+}
