--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 @import url("blocks/nav.css");
 @import url("blocks/contacts.css");
 @import url("blocks/features.css");
-@import url("blocks/cervices.css");
+@import url("blocks/services.css");
 @import url("blocks/reviews.css");
 @import url("blocks/last_news.css");
 @import url("blocks/sidebar.css");
@@ -16,3 +16,4 @@
 @import url("blocks/form.css");
 @import url("blocks/partners.css");
 @import url("blocks/footer.css");
+@import url("blocks/intro.css");
