--- a/css/blocks/banner.css
+++ b/css/blocks/banner.css
@@ -33,3 +33,39 @@
 	display: flex;
 	justify-content: center;
 }
+
+.test {
+
+}
+
+.test__list {
+
+}
+
+.test__item {
+
+}
+
+.test__link {
+
+}
+
+.test__link--active {
+
+}
+
+.test__link_icon_main--active {
+
+}
+
+.test__title {
+
+}
+
+.link_icon_reviews {
+
+}
+
+.test__link_services {
+
+}
